<resources>
    <string name="app_name">Is it op?</string>
    <string name="sign_in">Sign in</string>
    <string name="passwordLabel">Password</string>
    <string name="usernameLabel">Username</string>
    <string name="welcome_user">Welcome, </string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="shoppingCart">shopping cart</string>
    <string name="addBeer">Buy beer</string>
    <string name="settings">settings</string>
    <string name="accountSettings">Account settings</string>
    <string name="addAccount">Add Account</string>
    <string name="logOut">Log out</string>

    <string name="addBeer_label">Beer type</string>
    <string name="beerAmount_label">Amount of beer(L)</string>
    <string name="addBeerOrderBtn">Add order</string>
    <string name="changePasswordLabel">Change Password</string>
    <string name="currentPasswordLabel">Current Password</string>
    <string name="newPasswordLabel">New Password</string>
    <string name="repeatPasswordLabel">Repeat Password</string>
    <string name="confirmPasswordBtn">Confirm</string>

    <string name="fragment_label">Don\'t drink too much!</string>

    <!-- Variables in the coed -->
    <!-- MainActivity -->
    <string name="wrongPasswordLabel">Wrong password!</string>
    <string name="missingUserLabel">You don\t exist!</string>
    <!-- MenuActivity -->
    <string name="beerBoughtBtn">Bought!</string>
    <string name="notificationTicker">BEER</string>
    <string name="notificationTitle">No more beer!</string>
    <string name="notificationText">It seems like we ran out of beer :o Go to the store!</string>
    <!-- AddBeer -->
    <string name="beerSuccess">Beer added successfully!</string>
    <string name="beerFailure">There was a problem adding your beer... You had one too many?</string>
    <!-- AccountSettings -->
    <string name="passwordChangedSuccess">Your password is successfully changed</string>
    <string name="passwordChangedMismatch">Your passwords don\t match</string>
    <string name="passwordChangedWrong">The password you entered is wrong</string>
    <string name="passwordChangedFubar">This doesn\'t make sens... Please contact your local open source developer</string>
</resources>
