<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="willems.bart.isitop.AccountSettings">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/changePasswordLabel"
        android:id="@+id/ChangePasswordLabel"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/currentPasswordLabel"
        android:id="@+id/currentPasswordLabel"
        android:layout_below="@+id/ChangePasswordLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/currentPassword"
        android:layout_below="@+id/currentPasswordLabel"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/newPasswordLabel"
        android:id="@+id/newPasswordLabel"
        android:layout_below="@+id/currentPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/newPassword"
        android:layout_below="@+id/newPasswordLabel"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/repeatPasswordLabel"
        android:id="@+id/repeatPasswordLabel"
        android:layout_below="@+id/newPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/repeatPassword"
        android:layout_below="@+id/repeatPasswordLabel"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmPasswordBtn"
        android:id="@+id/confirmPassword"
        android:layout_below="@+id/repeatPassword"
        android:layout_centerHorizontal="true"
        android:onClick="changePassword"
        android:layout_marginTop="50dp" />
</RelativeLayout>
