<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="willems.bart.isitop.AddBeer">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/addBeer_label"
        android:id="@+id/addBeer_label"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/beerName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/beerName"
        android:layout_below="@+id/addBeer_label"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:width="320dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/beerAmount_label"
        android:id="@+id/beerAmount_label"
        android:layout_below="@+id/beerName"
        android:layout_alignStart="@+id/beerName"
        android:layout_marginTop="60dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/beerAmount"
        android:layout_below="@+id/beerAmount_label"
        android:layout_centerHorizontal="true"
        android:width="320dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addBeerOrderBtn"
        android:id="@+id/button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="addOrder"/>
</RelativeLayout>
